# two-be

./: .gitignore  ADC Micro-Model Organelle Datasets (5 Million Samples).md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  results_shootout.json
.github/workflows/: ci.yml
bbdos/: __init__.py
bbdos/cpu/: __init__.py  abacus.py  fu_alu.py  fu_flow.py  fu_logic.py  fu_map.py  fu_move.py  fu_stack.py  model.py  model_soroban.py  orchestrator.py  organelles.py  swarm.py  wired_voltron.py
bbdos/kernel/: CMakeLists.txt  __init__.py  bindings.py  bitswitch.cpp  bitswitch.h  trix.cpp  trix.h
bbdos/lm/: __init__.py  model.py
bbdos/neural_mcp/: __init__.py  calculator.py  calculator_v2.py
bbdos/nvf/: __init__.py  differentiable_computer.py  neural_vector_field.py  reranker.py  train_reranker.py  trix_computer.py
bbdos/trix/: __init__.py  qat.py
configs/: bbdos_lm.yaml  neural_cpu.yaml
docs/: ABBY_NORMAL_EXPERIMENT.md  ABBY_NORMAL_EXPERIMENT_FINAL.md  ABBY_NORMAL_EXPERIMENT_v2.md  ARCHITECTURE.md  CLIFF_NOTES_FOR_EVERYONE.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_v2.md  LINKEDIN_BLOG_POST.md  LINKEDIN_BLOG_POST_v2.md  LINKEDIN_POST_DRAFT.md  METRICS.md  NEURAL_6502_TOPOLOGY.md  PAPER_DRAFT.md  PAPER_FULL_DRAFT.md  PAPER_OUTLINE_FULL.md  PUBLICATION_CHECKLIST.md  REPRODUCING.md  SESSION_ARTIFACTS.md  SESSION_LOG_2025_12_11.md  SWARM_BUILD_LOG.md  WEIGHTS.md  WIRED_VOLTRON_DESIGN.md  tmp_abacus_raw_thoughts.md  tmp_abacus_raw_thoughts_v2.md  tmp_abacus_reflections.md  tmp_abacus_reflections_v2.md  tmp_contexts_examination.md  tmp_droid_clarity_journal.md  tmp_droid_nvf_journal.md  tmp_droid_raw_thoughts.md  tmp_droid_reflections.md  tmp_droid_synthesis.md  tmp_droid_victory_reflections.md  tmp_droid_victory_synthesis.md  tmp_droid_victory_thoughts.md  tmp_honest_reframe.md  tmp_landscape_paradigm_raw_thoughts.md  tmp_landscape_paradigm_reflections.md  tmp_landscape_paradigm_synthesis.md  tmp_meta_examination.md  (+8 more)
docs/paper/: bbdos_paper.tex
examples/expected_output/: benchmark.txt  demo.txt  pytest.txt
experiments/: test_real_trix.py  train_trix_computer.py  trix_lr_sweep.py  trix_sweep.py
results/: trix_computer_experiment.json  trix_sweep_results.json
scripts/: benchmark.py  demo.py  evaluate_cpu.py  generate_traces.py  ripple_test.py  run_fibonacci.py  soroban_6502_test.py  stereo_shootout.py  train_adc.py  train_bus.py  train_cpu.py  train_flags.py  train_incdec.py  train_lm.py  train_organelles.py  train_shift.py  train_stack.py  train_swarm.py  train_transfer.py  validate_adc_data.py
tests/: __init__.py  test_abacus.py  test_cpu.py  test_kernel.py
